// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`euiProgressStyles indeterminate div CSS colors accent 1`] = `
"
  &::before {
    background-color: #F04E98;
  }
;;label:accent;"
`;

exports[`euiProgressStyles indeterminate div CSS colors danger 1`] = `
"
  &::before {
    background-color: #BD271E;
  }
;;label:danger;"
`;

exports[`euiProgressStyles indeterminate div CSS colors primary 1`] = `
"
  &::before {
    background-color: #0077CC;
  }
;;label:primary;"
`;

exports[`euiProgressStyles indeterminate div CSS colors subdued 1`] = `
"
  &::before {
    background-color: #646a77;
  }
;;label:subdued;"
`;

exports[`euiProgressStyles indeterminate div CSS colors success 1`] = `
"
  &::before {
    background-color: #00BFB3;
  }
;;label:success;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis0 1`] = `
"
  &::before {
    background-color: #54B399;
  }
;;label:vis0;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis1 1`] = `
"
  &::before {
    background-color: #6092C0;
  }
;;label:vis1;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis2 1`] = `
"
  &::before {
    background-color: #D36086;
  }
;;label:vis2;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis3 1`] = `
"
  &::before {
    background-color: #9170B8;
  }
;;label:vis3;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis4 1`] = `
"
  &::before {
    background-color: #CA8EAE;
  }
;;label:vis4;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis5 1`] = `
"
  &::before {
    background-color: #D6BF57;
  }
;;label:vis5;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis6 1`] = `
"
  &::before {
    background-color: #B9A888;
  }
;;label:vis6;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis7 1`] = `
"
  &::before {
    background-color: #DA8B45;
  }
;;label:vis7;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis8 1`] = `
"
  &::before {
    background-color: #AA6556;
  }
;;label:vis8;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis9 1`] = `
"
  &::before {
    background-color: #E7664C;
  }
;;label:vis9;"
`;

exports[`euiProgressStyles indeterminate div CSS colors warning 1`] = `
"
  &::before {
    background-color: #FEC514;
  }
;;label:warning;"
`;

exports[`euiProgressStyles indeterminate div CSS positions absolute 1`] = `
"position:absolute;
  inset-block-start: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  background-color: transparent;
  
;;label:absolute;"
`;

exports[`euiProgressStyles indeterminate div CSS positions fixed 1`] = `
"position:fixed;z-index:1001;
  inset-block-start: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  background-color: transparent;
  
;;label:fixed;"
`;

exports[`euiProgressStyles indeterminate div CSS positions static 1`] = `"position:relative;label:static;"`;

exports[`euiProgressStyles native progress CSS colors accent 1`] = `
"
  &::-webkit-progress-value {
    background-color: #F04E98;
  }
  &::-moz-progress-bar {
    background-color: #F04E98;
  }
;;label:accent;"
`;

exports[`euiProgressStyles native progress CSS colors danger 1`] = `
"
  &::-webkit-progress-value {
    background-color: #BD271E;
  }
  &::-moz-progress-bar {
    background-color: #BD271E;
  }
;;label:danger;"
`;

exports[`euiProgressStyles native progress CSS colors primary 1`] = `
"
  &::-webkit-progress-value {
    background-color: #0077CC;
  }
  &::-moz-progress-bar {
    background-color: #0077CC;
  }
;;label:primary;"
`;

exports[`euiProgressStyles native progress CSS colors subdued 1`] = `
"
  &::-webkit-progress-value {
    background-color: #646a77;
  }
  &::-moz-progress-bar {
    background-color: #646a77;
  }
;;label:subdued;"
`;

exports[`euiProgressStyles native progress CSS colors success 1`] = `
"
  &::-webkit-progress-value {
    background-color: #00BFB3;
  }
  &::-moz-progress-bar {
    background-color: #00BFB3;
  }
;;label:success;"
`;

exports[`euiProgressStyles native progress CSS colors vis0 1`] = `
"
  &::-webkit-progress-value {
    background-color: #54B399;
  }
  &::-moz-progress-bar {
    background-color: #54B399;
  }
;;label:vis0;"
`;

exports[`euiProgressStyles native progress CSS colors vis1 1`] = `
"
  &::-webkit-progress-value {
    background-color: #6092C0;
  }
  &::-moz-progress-bar {
    background-color: #6092C0;
  }
;;label:vis1;"
`;

exports[`euiProgressStyles native progress CSS colors vis2 1`] = `
"
  &::-webkit-progress-value {
    background-color: #D36086;
  }
  &::-moz-progress-bar {
    background-color: #D36086;
  }
;;label:vis2;"
`;

exports[`euiProgressStyles native progress CSS colors vis3 1`] = `
"
  &::-webkit-progress-value {
    background-color: #9170B8;
  }
  &::-moz-progress-bar {
    background-color: #9170B8;
  }
;;label:vis3;"
`;

exports[`euiProgressStyles native progress CSS colors vis4 1`] = `
"
  &::-webkit-progress-value {
    background-color: #CA8EAE;
  }
  &::-moz-progress-bar {
    background-color: #CA8EAE;
  }
;;label:vis4;"
`;

exports[`euiProgressStyles native progress CSS colors vis5 1`] = `
"
  &::-webkit-progress-value {
    background-color: #D6BF57;
  }
  &::-moz-progress-bar {
    background-color: #D6BF57;
  }
;;label:vis5;"
`;

exports[`euiProgressStyles native progress CSS colors vis6 1`] = `
"
  &::-webkit-progress-value {
    background-color: #B9A888;
  }
  &::-moz-progress-bar {
    background-color: #B9A888;
  }
;;label:vis6;"
`;

exports[`euiProgressStyles native progress CSS colors vis7 1`] = `
"
  &::-webkit-progress-value {
    background-color: #DA8B45;
  }
  &::-moz-progress-bar {
    background-color: #DA8B45;
  }
;;label:vis7;"
`;

exports[`euiProgressStyles native progress CSS colors vis8 1`] = `
"
  &::-webkit-progress-value {
    background-color: #AA6556;
  }
  &::-moz-progress-bar {
    background-color: #AA6556;
  }
;;label:vis8;"
`;

exports[`euiProgressStyles native progress CSS colors vis9 1`] = `
"
  &::-webkit-progress-value {
    background-color: #E7664C;
  }
  &::-moz-progress-bar {
    background-color: #E7664C;
  }
;;label:vis9;"
`;

exports[`euiProgressStyles native progress CSS colors warning 1`] = `
"
  &::-webkit-progress-value {
    background-color: #FEC514;
  }
  &::-moz-progress-bar {
    background-color: #FEC514;
  }
;;label:warning;"
`;

exports[`euiProgressStyles native progress CSS positions absolute 1`] = `
"position:absolute;
  inset-block-start: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  background-color: transparent;
  
      &::-webkit-progress-bar {
        background-color: transparent;
      }
;;label:absolute;"
`;

exports[`euiProgressStyles native progress CSS positions fixed 1`] = `
"position:fixed;z-index:1001;
  inset-block-start: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  background-color: transparent;
  
      &::-webkit-progress-bar {
        background-color: transparent;
      }
;;label:fixed;"
`;

exports[`euiProgressStyles native progress CSS positions static 1`] = `"position:relative;label:static;"`;
